# Community_Safety_App

./: README.md  community.db  pyproject.toml
backend/: __init__.py  community.db  db.py  main.py  models.py  pyproject.toml  readmed.md  requirements.txt  schemas.py  security.py
backend/community_safety_backend.egg-info/: PKG-INFO
backend/routers/: __init__.py  auth.py  incidents.py  notifications.py  rewards.py  role_requests.py  taxonomy.py  users.py
backend/scripts/: bootstrap_admin.py  seed_sample_data.py  upgrade_sqlite.py
backend/services/: __init__.py  ledger.py  locations.py  rewards.py  role_requests.py
community_safety_backend.egg-info/: PKG-INFO  SOURCES.txt
frontend/: .env.local.example  README.md  index.html  package-lock.json  package.json  readmed.md  tailwind.config.js  vite.config.js
frontend/mobile/: README.md  app.json  package-lock.json  package.json
frontend/mobile/app/: _layout.tsx
frontend/mobile/components/: AdminManagementPanel.tsx  IncidentApprovalsPanel.tsx  IncidentDetailSheet.tsx  IncidentFormSheet.tsx
frontend/mobile/context/: AuthContext.tsx
frontend/mobile/hooks/: usePushNotifications.ts
frontend/mobile/utils/: api.ts  imagePicker.ts
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: AdminPanel.jsx  AuthModal.jsx  IncidentApprovals.jsx  IncidentCard.jsx  IncidentForm.jsx  IncidentList.jsx  IncidentMapOverview.jsx  IncidentMapPreview.jsx  MapLocationPicker.jsx  NotificationBell.jsx  RoleAccessPanel.jsx  SentimentPulse.jsx  StatsOverview.jsx  UserDashboardModal.jsx
frontend/src/styles/: index.css
(+8 files in other folders)
